--- a/css/index.css
+++ b/css/index.css
@@ -5,26 +5,19 @@
 }
 
 svg {
+    background-color: #222222;
     position: absolute;
     width: 100%;
-    height: 90%;
+    height: 80%;
     border : solid 2px;
 }
 
 path {
-    stroke: #666;
+    stroke: #999999;
     fill: none;
     fill-opacity: 0.6;
-    stroke-width: 2px;
+    stroke-width: 1px;
     stroke-linecap: round;
     stroke-linejoin: round;
 }
 
-/*#slider {
-    position: absolute;
-    left: 50%;
-    margin-left: -300px;
-    bottom: 20px;
-    width: 600px;
-    height: 50px;
-}*/
