--- a/css/index.css
+++ b/css/index.css
@@ -5,7 +5,8 @@
 }
 
 svg {
-    background-color: #222222;
+    /*background-color: #2222;*/
+    background-color: #f2f2f2;
     position: absolute;
     width: 100%;
     height: 80%;
@@ -13,10 +14,15 @@ svg {
 }
 
 path {
-    stroke: #999999;
+    stroke: #bbbbbb;
+    fill: #000000;
+    fill-opacity: 0.8;
+    stroke-width: 1.5px; 
+    /*stroke: #999999;
     fill: none;
     fill-opacity: 0.6;
-    stroke-width: 1px;
+    stroke-width: 1.3px;*/
+    
     stroke-linecap: round;
     stroke-linejoin: round;
 }
