--- a/css/index.css
+++ b/css/index.css
@@ -24,23 +24,17 @@
     height: 100%;
 }
 
-/*svg {
-    /*background-color: #2222;
-    background-color: #f2f2f2;
-    position: absolute;
+/* TODO : remove this once scaling is done (this helps for debug) */
+#mainSvg {
     border : solid 2px;
 }
-*/
+
+
 path {
     stroke: #bbbbbb;
     fill: #000000;
     fill-opacity: 0.8;
     stroke-width: 1.5px; 
-    /*stroke: #999999;
-    fill: none;
-    fill-opacity: 0.6;
-    stroke-width: 1.3px;*/
-    
     stroke-linecap: round;
     stroke-linejoin: round;
 }
