--- a/css/index.css
+++ b/css/index.css
@@ -1,18 +1,11 @@
 
+/* ---------------------------------------------------
+    OVERALL PAGE STYLE
+----------------------------------------------------- */
+
 * {
     margin: 0;
     padding: 0;
-}
-
-
-.svg-container {
-    display: block;
-    /*position: relative;*/
-    width: 100%;
-    height: 100%;
-    padding-bottom: 100%;
-    vertical-align: middle;
-    overflow: hidden;
 }
 
 .svg-content {
@@ -25,10 +18,18 @@
 }
 
 /* TODO : remove this once scaling is done (this helps for debug) */
+#playSvg {
+  border : solid 2px;
+}
+
+/* TODO : remove this once scaling is done (this helps for debug) */
 #mainSvg {
     border : solid 2px;
 }
 
+/* ---------------------------------------------------
+    MAP AND EVENTS STYLE
+----------------------------------------------------- */
 
 path {
     stroke: #bbbbbb;
@@ -46,27 +47,9 @@ circle {
     vector-effect: non-scaling-stroke;
 }
 
-/* Tooltip styling
-path:hover {
-  stroke: #002868 !important;
-  stroke-width:2px;
-  stroke-linejoin: round;
-  fill: #002868 !important;
-  cursor: pointer;
-}
-*/
-
-circle:hover {
-  fill: white !important;
-}
-
-
-/* Tooltip styling
-
-.tooltip-details {
-  color:white;
-}
-*/
+/* ---------------------------------------------------
+    EVENT SELECTION STYLE (tooltip + hover)
+----------------------------------------------------- */
 
 div.tooltip {
   font-family:"avenir next", Arial, sans-serif;
@@ -80,35 +63,59 @@ div.tooltip b {
   color: #FFA51F;
 }
 
+circle:hover {
+  fill: white !important;
+}
 
-/*body {
-    font-family: 'Poppins', sans-serif;
-    background: #fafafa;
+/* Country selection FIXME: need/want this?
+path:hover {
+  stroke: #002868 !important;
+  stroke-width:2px;
+  stroke-linejoin: round;
+  fill: #002868 !important;
+  cursor: pointer;
 }
 */
-/*p {
-    font-family: 'Poppins', sans-serif;
-    font-size: 1.1em;
-    font-weight: 300;
-    line-height: 1.7em;
-    color: #999;
+
+/* ---------------------------------------------------
+    PLAY BAR STYLE
+----------------------------------------------------- */
+
+.track {
+  stroke: #000;
+  stroke-opacity: 0.3;
+  stroke-width: 10px;
+  stroke-linecap: round;
 }
-*/
-/*a, a:hover, a:focus {
-    color: inherit;
-    text-decoration: none;
-    transition: all 0.3s;
-}*/
-/*
-.navbar {
-    padding: 15px 10px;
-    background: #fff;
-    border: none;
-    border-radius: 0;
-    margin-bottom: 40px;
-    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
+
+.ticks {
+  font-size: 10px;
 }
-*/
+
+.track-inset {
+  stroke: #dcdcdc;
+  stroke-width: 8px;
+  stroke-linecap: round;
+}
+
+.track-overlay {
+  pointer-events: stroke;
+  stroke-width: 50px;
+  stroke: transparent;
+  stroke-linecap: round;
+}
+
+.handle {
+  fill: #fff;
+  stroke: #000;
+  stroke-opacity: 0.5;
+  stroke-width: 1.25px;
+}
+
+/* ---------------------------------------------------
+    FIXME: from here, not sure what's useful and what's not
+----------------------------------------------------- */
+
 .navbar-btn {
     box-shadow: none;
     outline: none !important;
