--- a/css/index.css
+++ b/css/index.css
@@ -44,7 +44,8 @@ path {
 
 circle {
         /* keeps width fixed when zooming */
-    vector-effect: non-scaling-stroke;
+    /*vector-effect: non-scaling-stroke;*/
+    fill: none;
 }
 
 /* ---------------------------------------------------
@@ -65,6 +66,7 @@ div.tooltip b {
 
 circle:hover {
   fill: white !important;
+  stroke: white;
 }
 
 /* Country selection FIXME: need/want this?
