--- a/misc/layout/index.css
+++ b/misc/layout/index.css
@@ -1,5 +1,127 @@
 
 /* ---------------------------------------------------
+    Dummy layout
+----------------------------------------------------- */
+
+body {
+    /*margin : 20px;*/
+    padding: 0px;
+    margin: 0px;
+    overflow: auto;
+    background-color: #888888;
+}
+
+.page-container {
+}
+
+.toplevel-container{
+    margin : 2px;
+    padding : 2px;
+    border : solid black 1apx;
+    border-radius : 4px;
+}
+
+
+/* ---------------------------------------------------
+    2-panel layout stuff
+----------------------------------------------------- */
+
+.split-container {
+        /* flexbox              */
+    display: flex;
+    flex-direction: row;
+    /*border: 1px solid silver;*/
+    overflow: hidden;
+    /*overflow: auto;*/
+    xtouch-action: none;            /* avoid browser level touch actions */
+        /* positioning      */
+    position : absolute;
+    height : 90
+    padding: 0;
+    margin: 0;
+        /* sizing           */
+    width : 100%;
+    height : 100%;
+}
+
+.splitter {
+    flex: 0 0 auto;
+    cursor: col-resize;
+
+    width: 10px;
+    min-height: 200px;
+
+    background: url("./slider.png") center center no-repeat #333333;
+    background-size: 40px 40px;
+    border: solid black 1px;
+
+    /* Icon overflow : doesn't work
+    padding-left: 10px;
+    margin-left: -10px;
+    padding-right: 10px;
+    margin-right: -10px;*/
+}
+
+.splitter-left-panel {
+    padding: 2px;
+    flex: 0 0 auto;
+    width: 300px;
+    /*min-height: 60%;*/
+    min-width: 50%;
+    max-width: 80%;
+    white-space: nowrap;
+}
+
+.splitter-right-panel {
+    flex: 1 1 auto;
+    padding: 2px;
+    width: 100%;
+    min-height: 100%;
+    min-width: 20%%;
+}
+
+/* ---------------------------------------------------
+    Content
+----------------------------------------------------- */
+
+
+
+.mapdiv {
+    background-color: brown;
+        /* Position
+    position : absolute;
+    left : 0%;
+    top : 0%;*/
+        /* witdh
+    width : 70%;*/
+    height : 75%;
+}
+
+.settingsdiv {
+    background-color: purple;
+        /* Position
+    position : absolute;
+    left : 0%;
+    top : 75%;*/
+        /* witdh                        */
+    /*width : 70%;*/
+    height : 26%;
+}
+
+.sidebardiv {
+    background-color: green;
+        /* Position
+    position : absolute;
+    left : 70%;
+    top : 0%;*/
+        /* witdh
+    width : 30%;*/
+    height : 100%;
+}
+
+
+
+/* ---------------------------------------------------
     OVERALL PAGE STYLE
 ----------------------------------------------------- */
 
@@ -15,163 +137,21 @@
     left: 0;
     width: 100%;
     height: 100%;
-    /*preserveAspectRatio=none;*/
 }
 
-    /*  Background style
-     */
-body {
-    /*margin : 20px;*/
-    padding: 0px;
-    margin: 0px;
-    overflow: auto;
-    background-color: #888888;
+/* TODO : remove this once scaling is done (this helps for debug) */
+#playSvg {
+  border : solid 2px;
 }
 
-    /*  Top level blocks of the visualization :
-     *  map, graph panel, settings
-     */
-.app-panel{
-    margin : 2px;
-    padding : 2px;
-    border : solid black 2px;
-    border-radius : 4px;
+/* TODO : remove this once scaling is done (this helps for debug) */
+#mainSvg {
+    border : solid 2px;
 }
-
-    /* generic style for icon-button */
-.btn-icon {
-        /* positioning */
-    margin : 3px;
-    width : 40px;
-    height : 40px;
-        /* Style -> fullsize background-image */
-    background-color: transparent;
-    background-repeat: no-repeat;
-    background-position: 0px 0px;
-    background-size : 100% 100%;
-}
-
-/*  TODO : remove when settings are done */
-.settingsdiv {
-        /*will be toggled by the collapse-settings button */
-    height : 26%;
-    visibility : visible;
-        /* debug */
-    /*background-color: purple;*/
-}
-.sidebardiv {
-    background-color: green;
-        /* Position
-    position : absolute;
-    left : 70%;
-    top : 0%;*/
-        /* witdh
-    width : 30%;*/
-    height : 100%;
-}
-
-/* ---------------------------------------------------
-    2-panel layout stuff
------------------------------------------------------ */
-
-.panels-container {
-        /* children layout */
-    display: flex;
-    flex-direction: row;
-    overflow: hidden;
-    xtouch-action: none;            /* avoid browser level touch actions */
-        /* positioning      */
-    position : absolute;
-    height : 90;
-    padding: 0;
-    margin: 0;
-    width : 100%;
-    height : 100%;
-}
-
-.splitter {
-        /* position & size */
-    flex: 0 0 auto;
-    width: 10px;
-    min-height: 200px;
-        /* Styling */
-    background: url("./splitter.png") center center no-repeat #333333;
-    background-size: 40px 40px;
-    border: solid black 1px;
-        /* resize behaviour */
-    cursor: col-resize;
-}
-
-.left-panel-split {
-        /* position & size */
-    flex: 0 0 auto;
-    min-width: 66%;
-    max-width: 80%;
-    height : 100%;
-        /* misc style */
-    white-space: nowrap;
-    padding: 2px;
-}
-
-.right-panel-split {
-    flex: 1 1 auto;
-    padding: 2px;
-    width: 100%;
-    min-height: 100%;
-    min-width: 20%%;
-}
-
-/* ---------------------------------------------------
-    MAPDIV & CHILDREN
-    Here, we want to allocate vertical space so that :
-    - map-controls gets what he needs
-    - map-canva get everything if map-control is collapsed
------------------------------------------------------ */
-
-#mapdiv {
-    height : 75%;
-        /* for children positioning / sizing */
-    display : flex;
-    flex-direction : column;
-        /* debug */
-    border : solid green 3px;
-}
-
-#map-controls {
-        /* position & size */
-    /*flex: 0 0 initial;*/
-    height : 50px ;
-    width : 100%;
-        /* children layout */
-    display : flex;
-    flex-direction: row;
-        /* debug */
-    border : solid red 2px;
-}
-
-#map-canva {
-        /* position & size */
-    /*flex: 0 0 auto;*/
-    height : calc( 100% - 50px ) ;
-    width : 100%;
-        /* debug */
-    border : solid yellow 3px;
-}
-
-
 
 /* ---------------------------------------------------
     MAP AND EVENTS STYLE
 ----------------------------------------------------- */
-
-#mainSvg{
-        /* size, relative to parent (#map-canva)
-            (parents size needs to be defined, else, oveflow)*/
-    height : 100% ;
-    width : 100%;
-        /* debug */
-    border : solid purple 2px;
-}
 
 path {
     stroke: #bbbbbb;
@@ -209,32 +189,19 @@ circle:hover {
   fill: white !important;
 }
 
+/* Country selection FIXME: need/want this?
+path:hover {
+  stroke: #002868 !important;
+  stroke-width:2px;
+  stroke-linejoin: round;
+  fill: #002868 !important;
+  cursor: pointer;
+}
+*/
 
 /* ---------------------------------------------------
-    MAP CONTROLS & TIMESLIDER STYLE
+    PLAY BAR STYLE
 ----------------------------------------------------- */
-
-#btn-play {
-    flex : 0 0 auto;
-    background-image: url(./play.svg);
-}
-
-#btn-reset {
-    flex : 0 0 auto;
-    background: url(./reset.svg);
-}
-
-#btn-collapse-settings {
-    flex : 0 0 auto;
-    background: url(./yo.png);
-}
-
-#svg-timeslider {
-        /* Position & size */
-    flex : 0 0 auto;
-    height : 100% ;
-    flex-grow : 1;
-}
 
 .track {
   stroke: #000;
