--- a/css/index.css
+++ b/css/index.css
@@ -41,7 +41,7 @@ body {
 
 .visualize-source-container {
   /*display: table;*/
-  overflow: hiddene;
+  overflow: hidden;
   /*clear: both;*/
   border: solid black 2px;
   border-radius: 4px;
@@ -223,9 +223,8 @@ body {
 
 #map-canva {
         /* position & size */
-    height : 100%;
+    height : calc( 100% - 50px ) ;
     width : 100%;
-    background-color: black;
 }
 
 #mainSvg{
@@ -236,8 +235,8 @@ body {
 }
 
 path {
-    stroke: #333333;
-    fill: #777777;
+    stroke: #bbbbbb;
+    fill: #000000;
     fill-opacity: 0.8;
     stroke-width: 1.5px;
     stroke-linecap: round;
@@ -248,7 +247,7 @@ path {
 
 circle {
         /* keeps width fixed when zooming */
-    /*vector-effect: non-scaling-stroke;*/
+    vector-effect: non-scaling-stroke;
 }
 
 /* ---------------------------------------------------
@@ -276,58 +275,54 @@ circle:hover {
     MAP CONTROLS & TIMESLIDER STYLE
 ----------------------------------------------------- */
 
-#refresh-btn:hover,
-#play-btn:hover,
-#forward-btn:hover,
-#backward-btn:hover,
-#selection-menu:hover {
-  cursor: pointer;
+#map-controls { /* typically inherits from one-line-menu */
+        /* position & size */
+    width : 100%;
 }
 
-#control-menu-border {
-  fill: black;
-  stroke: #FFA500;
-  stroke-width: 1;
+#btn-play {
+    flex : 0 0 auto;
+    background-image: url(../css/icons/play.svg);
 }
 
-#simulation-speed {
-  fill: #FFA500;
+#btn-reset {
+    flex : 0 0 auto;
+    background: url(../css/icons/reset.svg);
 }
 
-#categories-txt {
-  fill: #FFA500;
+#btn-collapse-settings {
+    flex : 0 0 auto;
+    background: url(../css/icons/yo.png);
 }
 
-/* ---------------------------------------------------
-    Clock
------------------------------------------------------ */
-
-
-
-#clock-border {
-  fill: black;
-  stroke: #FFA500;
-  stroke-width: 5;
+#svg-timeslider {
+        /* Position & size */
+    flex : 0 0 auto;
+    height : 100% ;
+    flex-grow : 1;
 }
 
-#display-date {
-  fill: #FFA500;
+.track {
+  stroke: #000;
+  stroke-opacity: 0.3;
+  stroke-width: 10px;
+  stroke-linecap: round;
 }
 
-#digital-clock path {
-  fill: #222;
-  stroke: #5f0;
-  stroke-opacity: 0;
+.ticks {
+  font-size: 10px;
 }
 
-#digital-clock circle {
-  fill: #FFA500;
-  stroke: #FFA500;
-  stroke-opacity: 0;
+.track-overlay {
+  pointer-events: stroke;
+  stroke-width: 50px;
+  stroke: transparent;
+  stroke-linecap: round;
 }
 
-#digital-clock .lit {
-  fill: #FFA500;
-  stroke: #FFA500;
-  stroke-opacity: 1;
+.handle {
+  fill: #fff;
+  stroke: #000;
+  stroke-opacity: 0.5;
+  stroke-width: 1.25px;
 }
