--- a/css/index.css
+++ b/css/index.css
@@ -39,6 +39,10 @@ body {
     border-radius : 4px;
 }
 
+/* ----
+ side panel for sources visualization
+---*/
+
 .visualize-source-container {
   /*display: table;*/
   overflow: hidden;
@@ -49,17 +53,77 @@ body {
   /*height: 200px;*/
 }
 
-.visualize-source-mention {
-  background-color: yellow;
+.visualize-source-mention-container {
+  /*display: table;*/
+  overflow: hidden;
+  /*clear: both;*/
+  border: solid black 2px;
+  border-radius: 4px;
+
   width: 30%;
   height: 100%;
   float: left;
+  position: relative;
+  /*height: calc(100% / 5);*/
+  /*height: 200px;*/
 }
+
+.visualize-source-mention-text {
+  background-color: yellow;
+  width: 100%;
+  height: 70%;
+  float: top;
+  word-wrap: break-word;
+  padding-bottom: 5px;
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-top: 5px;
+  background-image: white;
+  /*overflow: hidden;*/
+  /*text-overflow: ellipsis;*/
+  /*font-size: 1;*/
+}
+
+.visualize-source-mention-num {
+  background-color: pink;
+  width: 100%;
+  height: 30%;
+  float: bottom;
+
+  padding-bottom: 5px;
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-top: 5px;
+  /*overflow: hidden;*/
+  /*text-overflow: ellipsis;*/
+  /*font-size: 1;*/
+}
+
 .visualize-source-mention-chart {
   background-color: red;
   width: 70%;
   height: 100%;
   float: right;
+
+}
+
+
+.visualize-source-mention-chart svg path {
+  fill: none;
+}
+/* 
+  line charts for sources and mentions
+*/
+.line {
+    fill: none;
+    stroke: #ffab00;
+    stroke-width: 3;
+}
+
+/* Style the dots by assigning a fill and stroke */
+.dot {
+    fill: #ffab00;
+    stroke: #fff;
 }
 /*.bar-chart{
   width: 100%;
