--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -51,6 +51,8 @@
   display: none;
   height : 94%;
   background-color : black;
+  overflow-y : scroll;
+  overflow-x : hidden;
 }
 
 
@@ -61,7 +63,6 @@
   height:94%;
   display:block;
   background-color: var(--color-bg);
-
   font-family: 'Jura', sans-serif;
   font-size: 1.5vmin;
   text-align: justify;
@@ -85,25 +86,103 @@
 ----------------------------------------------------- */
 
 
+    /*  Container that holds the sourceGraph text and graph
+     *  previously
+     */
+/*.sourcegraph-container {*/
 .visualize-source-container {
+  /*display: table;*/
+  overflow: hidden;
+  background-color : black;
+  /*clear: both;*/
+  border: solid black 2px;
+  border-radius: 4px;
+  /*height: calc(100% / 5);*/
+  height: 200px;
+}
+
+    /*  Title/textbox for a source graph
+     */
+.sourcegraph-text {
   /*display: table;*/
   overflow: hidden;
   /*clear: both;*/
   border: solid black 2px;
   border-radius: 4px;
-  height: calc(100% / 5);
-  /*height: 200px;*/
+
+  width: 100%;
+  height: 20%;
+  float: top;
+  position: relative;
 }
 
-.visualize-source-mention {
-  background-color: yellow;
-  width: 30%;
-  height: 100%;
-  float: left;
-}
-.visualize-source-mention-chart {
+    /*  graph/chart area for a sourcegraph
+     *  previously .visualize-source-mention-chart
+     */
+/*.sourcegraph-graph {*/
+.visualize-source-mention-chart{
   background-color: red;
-  width: 70%;
-  height: 100%;
-  float: right;
+  width: 100%;
+  height: 80%;
+  float: bottom;
 }
+
+/*
+.visualize-source-mention-text {
+  background-color: yellow;
+  width: 100%;
+  height: 70%;
+  float: top;
+  word-wrap: break-word;
+  padding-bottom: 5px;
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-top: 5px;
+  background-image: white;
+  /*overflow: hidden;*/
+  /*text-overflow: ellipsis;*/
+  /*font-size: 1;*/
+}
+
+.visualize-source-mention-num {
+  background-color: pink;
+  width: 100%;
+  height: 30%;
+  float: bottom;
+
+  padding-bottom: 5px;
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-top: 5px;
+  /*overflow: hidden;*/
+  /*text-overflow: ellipsis;*/
+  /*font-size: 1;*/
+}
+*/
+
+
+.visualize-source-mention-chart svg path {
+  fill: none;
+}
+/*
+  line charts for sources and mentions
+*/
+.line {
+    fill: none;
+    stroke: #ffab00;
+    stroke-width: 3;
+}
+
+/* Style the dots by assigning a fill and stroke */
+.dot {
+    fill: #ffab00;
+    stroke: #fff;
+}
+/*.bar-chart{
+  width: 100%;
+  height: 100%;
+  z-index: 1000;
+}
+.clear{
+  clear:both;
+}*/
