--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -44,24 +44,41 @@
     font-size : 2.5vw;
     font-family: "SomeCoolFont";  /* "must be the last value specified" */
     color:#FFA500;
-
 }
 
 #sidebardiv {
   display: none;
-  height : 94%;
+  height : 93%;
   background-color : black;
+  overflow-y : overlay;
+  overflow-x : hidden;
+  scrollbar-gutter : auto;
+}
+#sidebardiv::-webkit-scrollbar {
+    width: 0.6em;
+    height : 30px;
+    /*overflow : overlay;*/
+    background: transparent;
+}
+#sidebardiv::-webkit-scrollbar-track {
+    background-color: transparent;
+    display : none;
+    /*-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);*/
+}
+#sidebardiv::-webkit-scrollbar-thumb {
+  background-color: var(--color-accent);
+  outline: 0px solid green;
 }
 
 
 /* ---------------------------------------------------
     Information div
 ----------------------------------------------------- */
+
 #informationdiv {
-  height:94%;
+  height:93%;
   display:block;
   background-color: var(--color-bg);
-
   font-family: 'Jura', sans-serif;
   font-size: 1.5vmin;
   text-align: justify;
@@ -70,7 +87,6 @@
 }
 
 .info-paragraph {
-
   margin: 1vmin;
   padding: 1vmin;
 }
@@ -80,30 +96,116 @@
 }
 
 
+
+
 /* ---------------------------------------------------
     GRAPHS STYLING
 ----------------------------------------------------- */
 
-
-.visualize-source-container {
-  /*display: table;*/
-  overflow: hidden;
-  /*clear: both;*/
-  border: solid black 2px;
-  border-radius: 4px;
-  height: calc(100% / 5);
-  /*height: 200px;*/
+    /*  Container that holds the sourceGraph text and graph
+     *  previously .visualize-source-container
+     */
+/*.visualize-source-container {*/
+.sourcegraph-container {
+        /* Position & dimension */
+    height: 25%;
+    position:relative;
+        /* spacing */
+    margin-bottom : 35px;
+        /* Color & border */
+    background-color: var(--color-gray);
+    margin : 4px 4px 25px 4px;
+    border: solid var(--color-gray) 4px;
+    border-radius: 4px;
 }
 
-.visualize-source-mention {
+    /* Bottom delimiter for sourcegraph-container */
+/*.sourcegraph-container:after {
+    content : "";
+    position: absolute;
+    left    : 33%;
+    bottom  : 0;
+    height  : 3px;
+    width   : 33%;
+    border-top : 3px solid var(--color-gray);
+}*/
+
+    /*  Title/textbox for a source graph
+     */
+.sourcegraph-text {
+        /* Position & dimensions */
+    width: 100%;
+    height: 20%;
+        /* font color & content properties */
+    color : var(--color-bg);
+    font-size: 125%;
+    font-weight: bold;
+    text-align:center;
+    overflow: hidden;
+    pointer-events: none;
+}
+
+    /*  graph/chart area for a sourcegraph
+     *  previously .visualize-source-mention-chart
+     */
+.sourcegraph-chart {
+        /* size & position */
+    width: 100%;
+    height: 80%;
+        /* color & content properties */
+    pointer-events: none;
+    background-color: var(--color-gray);
+}
+
+
+.visualize-source-mention-text {
   background-color: yellow;
-  width: 30%;
-  height: 100%;
-  float: left;
+  width: 100%;
+  height: 70%;
+  float: top;
+  word-wrap: break-word;
+  padding-bottom: 5px;
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-top: 5px;
+  background-image: white;
+  /*overflow: hidden;*/
+  /*text-overflow: ellipsis;*/
+  /*font-size: 1;*/
 }
-.visualize-source-mention-chart {
-  background-color: red;
-  width: 70%;
-  height: 100%;
-  float: right;
+
+.visualize-source-mention-num {
+  background-color: pink;
+  width: 100%;
+  height: 30%;
+  float: bottom;
+
+  padding-bottom: 5px;
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-top: 5px;
+  /*overflow: hidden;*/
+  /*text-overflow: ellipsis;*/
+  /*font-size: 1;*/
+}
+
+
+
+.visualize-source-mention-chart svg path {
+  fill: none;
+}
+
+/*
+  line charts for sources and mentions
+*/
+.line {
+    fill: none;
+    stroke: #ffab00;
+    stroke-width: 3;
+}
+
+/* Style the dots by assigning a fill and stroke */
+.dot {
+    fill: #ffab00;
+    stroke: #fff;
 }
