--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -157,7 +157,7 @@
 /*.visualize-source-container {*/
 .sourcegraph-container {
         /* Position & dimension */
-    height: 25%;
+    height: 28%;
     position:relative;
         /* spacing */
     margin-bottom : 35px;
@@ -166,6 +166,8 @@
     margin : 4px 4px 25px 4px;
     border: solid var(--gray) 4px;
     border-radius: 4px;
+        /* Overlaying */
+    z-index: 0;
 }
 
     /* Bottom delimiter for sourcegraph-container */
@@ -183,6 +185,7 @@
      */
 .sourcegraph-text {
         /* Position & dimensions */
+    position : relative;
     width: 100%;
     height: 20%;
         /* font color & content properties */
@@ -192,6 +195,8 @@
     text-align:center;
     overflow: hidden;
     pointer-events: none;
+        /* Overlaying */
+    z-index: 1;
 }
 
 
@@ -200,11 +205,21 @@
      */
 .sourcegraph-chart {
         /* size & position */
+    position : relative;
     width: 100%;
     height: 80%;
         /* color & content properties */
-    pointer-events: none;
+    /*pointer-events: none;*/
     background-color: var(--gray);
+        /* Overlaying */
+    z-index: 1;
+}
+
+.sourcegraph-chart>svg {
+        /* size & position */
+    position : relative;
+    width: 100%;
+    height: 100%;
 }
 
 
